# bevy_mod_edge_detection

./: Cargo.toml  README.md
assets/: edge_detection.wgsl
examples/: cornell_box.rs  simple.rs
src/: edge_detection.wgsl  lib.rs  node.rs  render_ext.rs
